welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:3: error: not found: value len
                                          return s/len(nums)}
                                                   ^